--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
-
-{% block title %}Acerca de{% endblock %}
+{% extends "base.html"}
+[% block title %}Acerca de Flask{% endblock %}
 
 {% block content %}
-<h2>Sobre este proyecto</h2>
-<p>Información sobre la aplicación Flask.</p>
-{% endblock %}
+    <h2>Mi proyecto</h2>
+    <p>Informacion mi palicacion.</p>
+{% endblock %}]
