--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% block title %}Inicio{% endblock %}
 
 {% block content %}
-<h2>Bienvenido a mi página de inicio</h2>
-<p>Contenido de la página principal.</p>
+<h2>Bienvenida a la página principal</h2>
+<p>Este es el contenido principal.</p>
+<a href="/about">Ir a About</a>
 {% endblock %}
 
