--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Mi Proyecto Flask{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <title>Mi Proyecto Flask</title>
 </head>
 <body>
-    <header>
-        <h1>Mi Proyecto Flask</h1>
-        <nav>
-            <a href="/">Inicio</a> |
-            <a href="/about">Acerca de</a>
-        </nav>
-    </header>
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
